# angular-bazel-with-library

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  angular.json  bazel-angular-bazel-library-build-fail  bazel-testlogs  package-lock.json  package.json  tsconfig.base.json
projects/my-app/src/: BUILD.bazel  main.dev.ts  rollup.config.js  styles.scss
projects/my-app/src/app/: app.component.html  app.component.ts  app.module.ts
projects/my-app/src/test/: index.html
projects/my-lib/src/: BUILD.bazel  public-api.ts
projects/my-lib/src/lib/: my-lib.module.ts
projects/my-lib/src/lib/icon/: inner.module.ts
projects/my-lib/src/lib/inner/: BUILD.bazel  inner.directive.spec.ts  inner.directive.ts  inner.module.ts  public-api.ts
tools/: BUILD.bazel
