package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "multi_sass_binary", "sass_binary", "sass_library")

load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    use_angular_plugin = True,
    name = "src",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts", "**/_stories/**", "test.ts"],
    ),
    angular_assets = glob(["**/*.html"]),
    module_name = "@hyland/ui",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/cdk",
        "@npm//@angular/compiler-cli",
        "@npm//@types",
        "@npm//rxjs"
    ],
)
