package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "multi_sass_binary", "sass_binary", "sass_library")

load("//tools:angular_ts_library.bzl", "ng_ts_library")

ng_ts_library(
    # use_angular_plugin = True,
    name = "src",
    srcs = [
        "index.ts",
        "public-api.ts",
        "lib/my-lib.component.ts",
        "lib/my-lib.module.ts",
        "lib/my-lib.service.ts",
    ],
    # angular_assets = glob(["**/*.html"]),
    module_name = "@literalpie/my-lib",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        # "@npm//@angular/compiler-cli",
        "@npm//@types",
        "@npm//rxjs",
        "//projects/my-lib/src/lib/inner"
    ],
)
